style: fixed wrong overflow styling in song cover image

--- a/packages/ui/LastFMViewer.module.css
+++ b/packages/ui/LastFMViewer.module.css
@@ -66,10 +66,10 @@
 	@apply glass relative mx-auto box-border flex h-full w-full flex-col justify-between overflow-y-auto rounded-lg p-4 shadow-xl ring-2 ring-slate-950/5;
 
 	figure {
-		@apply mx-auto mb-2 h-auto w-1/2 overflow-hidden rounded-lg border-inherit;
+		@apply mx-auto mb-2 h-auto w-1/2 overflow-clip rounded-lg border-inherit;
 
 		img {
-			@apply block h-full w-full overflow-hidden object-cover align-middle;
+			@apply block h-full w-full overflow-clip object-cover align-middle;
 		}
 	}
 
